...
        <item quantity="one">%1$s session</item>
        <item quantity="other">%1$s sessions</item>
    </plurals>

    <string name="today_unread">Unread</string>
    <string name="today_dismiss_message">Dismiss message</string>
    <string name="today_open_food">Open Food</string>
    <string name="today_open_training">Open Training</string>
    <string name="today_open_profile">Open Profile</string>
    <string name="today_start_workout">Start workout</string>
    <string name="today_category_plan">Plan</string>
    <string name="today_category_nutrition">Nutrition</string>
    <string name="today_category_training">Training</string>
    <string name="today_category_trend">Trend</string>
    <string name="today_category_achievement">Achievement</string>
...
